open-shift/openshift-route.yaml
#
# This YAML file was auto-generated by OpenShift management console
# in response to creating a route to the application.
# This route links the application demo front-end to external access.
#
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2020-01-17T22:05:43Z"
  labels:
    app: docker-demo
    area: web-server
  name: library
  namespace: default
  resourceVersion: "6711160"
  selfLink: /apis/route.openshift.io/v1/namespaces/default/routes/library
  uid: 818d1681-3975-11ea-a1a7-0a580a81009a
spec:
  host: library-default.apps.ose2.xivlab.net
  port:
    targetPort: 8000
  subdomain: ""
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-01-17T22:05:43Z"
      status: "True"
      type: Admitted
    host: library-default.apps.ose2.xivlab.net
    routerCanonicalHostname: apps.ose2.xivlab.net
    routerName: default
    wildcardPolicy: None
